[metadata]
name = pypokertools
version = 0.0.4
license = MIT
description = Tools for poker analysis in Python
long_description = file: README.md
author = jevgienij
author_email = 6131866+jevgienij@users.noreply.github.com
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    atomicwrites==1.4.0
    attrs==21.2.0
    colorama==0.4.4
    iniconfig==1.1.1
    packaging==20.9
    pluggy==0.13.1
    py==1.9.0
    pyparsing==2.4.7
    pytest==6.2.4
    pytest-pycharm==0.7.0
    six==1.15.0
    toml==0.10.2

[options.packages.find]
where=src