[metadata]
name = pypokertools
version = 0.0.5
license = MIT
description = Tools for poker analysis in Python
long_description = file: README.md
author = jevgienij
author_email = 6131866+jevgienij@users.noreply.github.com
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    atomicwrites==1.4.1
    attrs==23.1.0
    colorama==0.4.6
    iniconfig==2.0.0
    packaging==23.1
    pluggy==1.3.0
    py==1.11.0
    pyparsing==3.1.1
    pytest==7.4.1
    pytest-pycharm==0.7.0
    six==1.16.0
    toml==0.10.2

[options.packages.find]
where=src